--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="hahi.ico">
   <meta charset="UTF-8">
   <title>Serial Text + Color Sender</title>
   <style>
